--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 hardhat-tutorial/* linguist-documentation=false
 hardhat-tutorial/* linguist-vendored
+my-app/* linguist-documentation=false
+my-app/* linguist-vendored
